# billionaire-index

./: .replit  README.md  auth.py  database.py  database_models.py  db_config.py  main.py  models.py  pyproject.toml  token.json  utils.py
attached_assets/: billionaires-json.json
data/: billionaires.json
migrations/: env.py
migrations/versions/: initial_migration.py
react-ui/: README.md  package.json
react-ui/public/: index.html
react-ui/src/: App.js
react-ui/src/api/: index.js
react-ui/src/components/: Layout.js  Rankings.js  Vote.js
scrapers/: base_scraper.py  cdp_scraper.py  glassdoor_scraper.py  opensecrets_scraper.py  propublica_scraper.py  scraper_manager.py  sec_scraper.py
scripts/: import_data.py  update_billionaires.py
templates/: base.html  rankings.html  vote.html
