[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.1",
    "fastapi>=0.115.10",
    "jinja2>=3.1.5",
    "jose>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
]
